--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header class="header">
     <div class="container">
       <div class="header__box">
-        <img class="header__img" src="img/icon.png" alt="Логотип">
+        <img class="header__img" src="img/logo.png" alt="Логотип">
         <nav class="header__nav">
           <ul class="header__list">
             <li class="header__item">
