Добавил переменные и градиент, смещение в секции relax

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
       <button class="banner__button">Забронировать</button>
 
-      <a class="banner__arrow" href="#">
+      <a class="banner__arrow" href="#relax">
         <svg  class="banner__svg" width="97" height="97" viewbox="0 0 97 97" fill="none" xmlns="http://www.w3.org/2000/svg">
           <circle cx="48.5" cy="48.5" r="48" stroke="white"/>
           <rect x="34.4253" y="43.9162" width="1.82001" height="20.0201" transform="rotate(-44.9975 34.4253 43.9162)" fill="currentColor"/>
@@ -66,7 +66,7 @@
       </a>
     </section>
 
-    <section class="relax">
+    <section class="relax" id="relax">
       <div class="container">
         <h2 class="relax__subtitle">У нас есть все для классного 
           отдыха с друзьями!</h2>
@@ -271,7 +271,9 @@
           <ul class="feedback__list">
             <li class="feedback__item">
               <figure class="feedback__image">
-                <img class="feedback__img" src="img/max.jpg" alt="Фото Макс Самойлов">
+                <div class="feedback__box">
+                  <img class="feedback__img" src="img/max.jpg" alt="Фото Макс Самойлов">
+                </div>
                 <figcaption class="feedback__sign">Макс Самойлов</figcaption>
               </figure>
               <p class="feedback__text">
@@ -281,7 +283,9 @@
 
             <li class="feedback__item">
               <figure class="feedback__image">
-                <img class="feedback__img feedback__img_object-position-40" src="img/oksana.jpg" alt="Фото Оксана Григорьева">
+                <div class="feedback__box">
+                  <img class="feedback__img feedback__img_object-position-40" src="img/oksana.jpg" alt="Фото Оксана Григорьева">
+                </div>
                 <figcaption class="feedback__sign">Оксана Григорьева</figcaption>
               </figure>
               <p class="feedback__text">
@@ -291,7 +295,9 @@
 
             <li class="feedback__item">
               <figure class="feedback__image">
-                <img class="feedback__img feedback__img_object-position-80" src="img/nikita.jpg" alt="Фото Никита Ященко">
+                <div class="feedback__box">
+                  <img class="feedback__img feedback__img_object-position-80" src="img/nikita.jpg" alt="Фото Никита Ященко">
+                </div>
                 <figcaption class="feedback__sign">Никита Ященко</figcaption>
               </figure>
               <p class="feedback__text">
